<resources>
    <string name="app_name">ShippApp</string>
    <string name="txt_onb2">Save your favorite gifts to buy later!</string>
    <string name="txt_onb1">Discover over hundreds of eco-friendly gifts</string>
    <string name="txt_onb3">Customise your card to your beloved ones!</string>
    <string name="_email">Email</string>
    <string name="_password">Password</string>
    <string name="_login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="_register">Register</string>
    <string name="_name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="_reset">Reset</string>
    <string name="_home">Home</string>
    <string name="_category">Category</string>
    <string name="_favorite">Favorite</string>
    <string name="_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>